[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix web and actix cors for web server functionality
actix-web = "4.0"  # or latest version
actix-cors = "0.6"  # or latest version
actix-files = "0.6"  # for serving static files

# Serde for serialization/deserialization
serde = { version = "1.0", features = ["derive"] }

# Serde JSON for JSON serialization and deserialization (if you are dealing with JSON)
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2"